# mididude_ch32

./: Cargo.toml  build.rs  flake.nix
.cargo/: config.toml
src/: i2c_device.rs  lib.rs
